Fix columns stretching page on mobile

--- a/src/_tabs_look.scss
+++ b/src/_tabs_look.scss
@@ -77,7 +77,9 @@ div.expr {
   color: revert;
 }
 .col {
-  column-count: 3;
+  @include breakpoint(desktop) {
+    column-count: 3;
+  }
   height: min-content;
   padding: 1em 0;
 }
